<resources>
    <string name="app_name">A Slice of Nutrition Pie</string>
    <string name="todo">TODO</string>
    <string name="empty" />
    <string name="profile_button">Profile Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="textview">TextView</string>
    <string name="profile_image">profile image</string>
    <string name="settings_image">settings image</string>
    <string name="close_popup_button">close popup button</string>
    <string name="add_snack">Add Snack</string>
    <string name="add_dinner">Add Dinner</string>
    <string name="add_lunch">Add Lunch</string>
    <string name="add_breakfast">Add Breakfast</string>
    <string name="add_meal">Add Meal</string>
    <string name="food_icon">Food Icon</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="back_button">Back</string>
    <string name="checkmarkbutton">checkmarkButton</string>
    <string name="what_did_you_eat">What did you eat?</string>
    <string name="_2019_aleksander_lucy_elaina_regier_icons_made_by_www_freepik_com_from_www_flaticon_com"><![CDATA[2019 Aleksander Lucy & Elaina Regier Icons made by www.freepik.com from www.flaticon.com]]></string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="profile">Profile</string>
    <string name="sex">Sex:</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="activity_level">Activity Level:</string>
    <string name="search">search</string>
</resources>
