<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/roundedbox"
    android:orientation="vertical">



    <Button
        android:id="@+id/addBreakfastButton"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_breakfast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFFFF"
        android:onClick="goToSearchFoods"/>

    <Button
        android:id="@+id/addLunchButton"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_lunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFFFF"
        android:onClick="goToSearchFoods"/>


    <Button
        android:id="@+id/addDinnerButton"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFFFF"
        android:onClick="goToSearchFoods"/>

    <Button
        android:id="@+id/addSnackButton"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_snack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFFFF"
        android:onClick="goToSearchFoods"/>
</androidx.constraintlayout.widget.ConstraintLayout>